--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,7 @@ repo: upptime # The name of this repository
 sites:
   - name: Yach
     url: https://yachman.duckdns.org
+    icon: https://yachman.duckdns.org/static/icons/favicon.ico
   - name: Domo Easter
     url: https://domo.easter.fr
   - name: Gite du Galli
